# helix-community

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  entrypoint.sh  index.html  pyproject.toml  railway-deploy.sh  railway.toml
.circleci/: config.yml
.claude/skills/release/: SKILL.md
.claude/skills/setup/: SKILL.md
.github/workflows/: ci.yml
agents/crash_handler/: __init__.py  agent.py  main.py  prompts.py
agents/dev/: __init__.py  agent.py  main.py  prompts.py
agents/notifier/: agent.py  main.py
agents/qa/: __init__.py  agent.py  main.py  prompts.py
core/: config.py  events.py  llm.py  models.py  state.py  utils.py
integrations/: __init__.py  email.py  github.py  rollbar.py  sentry.py  slack.py
tests/agents/: test_crash_handler.py  test_dev.py  test_notifier.py  test_qa.py
tests/core/: test_config.py  test_events.py  test_llm.py  test_state.py  test_utils.py
tests/integrations/: test_email.py  test_github.py  test_rollbar.py  test_sentry.py  test_slack.py
