[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helix"
version = "0.2.0"
description = "Autonomous incident response — Sentry crash to merged PR in under 10 minutes"
requires-python = ">=3.12"
dependencies = [
    # Pydantic — shared data models across all agents
    "pydantic>=2.10",

    # Config parsing
    "pyyaml>=6.0.2",

    # Redis — state store and Pub/Sub event bus
    "redis>=5.2",            # asyncio support is built-in since redis-py 5.x

    # HTTP client — used by all integration wrappers (GitHub, JIRA, Slack)
    "httpx>=0.28",

    # Async SMTP — email notifications
    "aiosmtplib>=3.0",

    # Crash Handler webhook server + dashboard SSE
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",        # Server-Sent Events for the streaming dashboard

    # Auth0 JWT validation (RS256 via JWKS) + GitHub App JWT signing
    "PyJWT[crypto]>=2.10",

    # Postgres — user/project persistent storage
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",

    # Error tracking
    "rollbar>=0.16.0",

    # LLM backends (all imported lazily — only the provider in use needs to be installed)
    "anthropic>=0.40",        # crash_handler, qa, code_quality agents
    "openai>=1.55",           # openrouter backend (OpenAI-compatible)
    "boto3>=1.35",            # eventbridge backend (optional; AWS deployments only)
    "langsmith>=0.7.31",         # LLM call tracing and eval suite

    # OpenTelemetry — end-to-end distributed tracing (enabled via OTEL_ENABLED=true)
    "opentelemetry-api>=1.20",                        # core API; no-op by default when SDK not configured
    "opentelemetry-sdk>=1.20",                        # SDK: TracerProvider, BatchSpanProcessor
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",   # OTLP/gRPC exporter (Datadog, Grafana, Jaeger, etc.)
    "opentelemetry-instrumentation-fastapi>=0.41b0",  # auto-instrument FastAPI (crash handler)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",            # mock httpx calls in integration tests
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
# Include agents/, core/, integrations/ but not docs/, .venv/, etc.
include = ["agents*", "core*", "integrations*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
